[package]
name = "kiesel_duel"
version = "0.2.0"
authors = ["John Meyerhoff"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text_io = "0.1.12"
rocket = { version = "0.5.0-rc", features = ["json","http2"] }
# response not found
serde = { version = "1.0", features = ["derive"] }

# Each data format lives in its own crate; the sample code below uses JSON
# but you may be using a different one.
serde_json = "1.0"
